Added changes to test using real objects
Signed-off-by: Tanvir Alam <tanvralm@amazon.com>